prod/cat repo and service done and init prod hdlr
